Replace VM args relating to PermGen with their Metaspace equivalents.